--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1 {
     color: red;
     background-color: yellow;
     text-align: center;
-    border: 10px black solid;
+    border: 30px black solid;
     padding-top: 20px;
     padding-bottom: 20px;
     margin-bottom: 100px;
@@ -11,7 +11,7 @@ h1 {
 */
 
 h1  {
-    color:red
+    color:aquamarine
 }
 
 .title {
